# running-formulas-mcp

./: .gitignore  LICENSE  Makefile  README.md  backlog.md  pyproject.toml  requirements.txt  test_simple.py
src/running_formulas_mcp/: server.py
src/running_formulas_mcp/core/: __init__.py  conversions.py  formatting.py
src/running_formulas_mcp/formulas/: __init__.py  daniels.py  mcmillan.pkl  mcmillan.py  riegel.py
tests/: test_mcmillan.py  test_server.py
