[project]
name = "running-formulas-mcp"
version = "0.1.0"
description = "An MCP server that calculates well-known running formulas"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ "fastmcp" ]
license = {text = "MIT"}
authors = [
    {name = "Stev Witzel"}
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
running-formulas-mcp = "running_formulas_mcp:main"
