[project]
name = "running-formulas-mcp"
version = "0.3.0"
description = "An MCP server that calculates well-known running formulas"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ 
    "fastmcp",
    "numpy>=1.24.0",
    "joblib>=1.3.0"
]
license = {text = "MIT"}
authors = [
    {name = "Stev Witzel"}
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
running-formulas-mcp = "running_formulas_mcp:main"
